# get-me-a-coke

./: .env.example  .gitignore  Makefile  README.md  bedrock-model-selection.md  get-me-a-coke-deploy-status.md  pyproject.toml  technical-environment.md  vision.md
.kiro/specs/sigil-instrumentation/: .config.kiro  design.md  requirements.md  tasks.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: code-generation-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: execution-plan.md  story-generation-plan.md  unit-of-work-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirements.md  (+1 more)
docs/: PROJECT-REVIEW.md  agentcore-setup.md  observability-deep-dive.md
infra/: app.py  cdk.json
infra/stacks/: agent_stack.py  approval_stack.py  vending_machine_stack.py  wallet_service_stack.py
scripts/: setup_cdp_wallet.py
src/: config.py
src/agent/: __init__.py  agent.py  cli.py  config.py
src/observability/: __init__.py  exporters.py  fastapi_telemetry.py  sigil_tools.py  telemetry.py
src/vending_machine/: __init__.py  app.py  handler.py  models.py  routes.py  x402.py
src/wallet_service/: __init__.py  app.py  handler.py
tests/integration/: conftest.py  test_agent_vending_machine.py
(+21 files in other folders)
