[project]
name = "get-me-a-coke"
version = "0.1.0"
description = "PoC: Autonomous agent-to-service commerce using x402 payment protocol"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn>=0.34.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "bedrock-agentcore[strands-agents]>=0.1.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "openinference-instrumentation-strands-agents>=0.1.0",
    "sigil-sdk>=0.1.2",
    "sigil-sdk-strands>=0.1.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "moto[all]>=5.0.0",
    "hypothesis>=6.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vending_machine", "src/agent", "src/observability", "src/wallet_service"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
